export interface TimeSlot {
  startsAt: Date;
  endsAt: Date;
}
